@@ -56,7 +56,7 @@ proc qsub_wd {} {
    set hold_job1 [submit_job $jobargs 1 60 "" "" $cwdir 1] 
    get_qstat_j_info $hold_job1
    if {[string compare "$qstat_j_info(cwd)" "$wdir"] != 0} {
-      set error_text "qsub did not set the correct working dir: $wdir != $qstat_j_info(cwd)\n"
+      set error_text "qsub did not set the correct working dir(1): $wdir != $qstat_j_info(cwd)\n"
       add_proc_error "qsub_wd" -1 $error_text
    }
    delete_job $hold_job1
@@ -66,7 +66,7 @@ proc qsub_wd {} {
    set hold_job1 [submit_job $jobargs 1 60 "" "" $cwdir 1] 
    get_qstat_j_info $hold_job1
    if {[string compare "$qstat_j_info(cwd)" "$cwdir"] != 0} {
-      set error_text "qsub did not set the correct working dir: $cwdir != $qstat_j_info(cwd)\n"
+      set error_text "qsub did not set the correct working dir(2): $cwdir != $qstat_j_info(cwd)\n"
       add_proc_error "qsub_wd" -1 $error_text
    }
    delete_job $hold_job1
@@ -76,7 +76,7 @@ proc qsub_wd {} {
    set hold_job1 [submit_job $jobargs 1 60 "" "" $cwdir 1] 
    get_qstat_j_info $hold_job1
    if {[string compare "$qstat_j_info(cwd)" "$wdir"] != 0} {
-      set error_text "qsub did not set the correct working dir: $wdir != $qstat_j_info(cwd)\n"
+      set error_text "qsub did not set the correct working dir(3): $wdir != $qstat_j_info(cwd)\n"
       add_proc_error "qsub_wd" -1 $error_text
    }
    delete_job $hold_job1
@@ -86,7 +86,7 @@ proc qsub_wd {} {
    set hold_job1 [submit_job $jobargs 1 60 "" "" $cwdir 1] 
    get_qstat_j_info $hold_job1
    if {[string compare "$qstat_j_info(cwd)" "$cwdir"] != 0} {
-      set error_text "qsub did not set the correct working dir: $cwdir != $qstat_j_info(cwd)\n"
+      set error_text "qsub did not set the correct working dir(4): $cwdir != $qstat_j_info(cwd)\n"
       add_proc_error "qsub_wd" -1 $error_text
    }
    delete_job $hold_job1
